--- a/OwnSpotify/style.css
+++ b/OwnSpotify/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,300;1,400;1,500&family=Ubuntu:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,300;1,400;1,500&family=Ubuntu:ital,wght@0,400;0,500;1,300;1,400;1,500&family=Varela+Round&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,6 +9,31 @@ html, body{
     height: 100%;
     width: 100%;
 }
-h1{
-    background-color: blue;
+body{
+    background-color: antiquewhite;
 }
+ nav{
+font-family: 'Ubuntu', sans-serif;
+ }
+ nav ul{
+    display: flex;
+    background-color: black;
+    height: 70px;
+    list-style-type: none;
+    color: white;
+    align-items: center;
+
+ }
+
+ .brand img{
+    width: 49px;
+ }
+ nav ul li{
+    padding: 0px 3px;
+ }
+ .brand{
+    display: flex;
+    align-items: center;
+    font-weight: bolder;
+    font-size: 1.3rem;
+ }
