--- a/OwnSpotify/style.css
+++ b/OwnSpotify/style.css
@@ -1,75 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,300;1,400;1,500&family=Ubuntu:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,300;1,400;1,500&family=Ubuntu:ital,wght@0,400;0,500;1,300;1,400;1,500&family=Varela+Round&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html, body{
-    height: 100%;
-    width: 100%;
-}
-body{
-    background-color: antiquewhite;
-}
- nav{
-font-family: 'Ubuntu', sans-serif;
- }
- nav ul{
-    display: flex;
-    background-color: black;
-    height: 70px;
-    list-style-type: none;
-    color: white;
-    align-items: center;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
- }
+body {
+   background-color: antiquewhite;
+}
 
- .brand img{
-    width: 49px;
- }
- nav ul li{
-    padding: 0px 3px;
- }
- .brand{
-    display: flex;
-    align-items: center;
-    font-weight: bolder;
-    font-size: 1.3rem;
+* {
+   margin: 0;
+   padding: 0;
+}
 
- }
- .container{
-   min-height: 75vh;
+nav {
+   font-family: 'Ubuntu', sans-serif;
+}
+
+nav ul {
+   display: flex;
+   align-items: center;
+   list-style-type: none;
+   height: 65px;
+   background-color: black;
+   color: white;
+}
+
+nav ul li {
+   padding: 0 12px;
+}
+
+.brand img {
+   width: 44px;
+   padding: 0 8px;
+}
+
+.brand {
+   display: flex;
+   align-items: center;
+   font-weight: bolder;
+   font-size: 1.3rem;
+}
+
+.container {
+   min-height: 72vh;
    background-color: black;
    color: white;
    font-family: 'Varela Round', sans-serif;
    display: flex;
    margin: 23px auto;
    width: 70%;
-border-radius: 14px;
-padding: 35px;
-background-image: url(bg.jpeg);
+   border-radius: 12px;
+   padding: 34px;
+   background-image: url('bg.jpg');
+}
 
- }
- .bottom{
+.bottom {
    position: sticky;
-   background-color: black;
-   height: 125px;
    bottom: 0;
+   height: 130px;
+   background-color: black;
+   color: white;
    display: flex;
    justify-content: center;
-      align-items: center;
-      color:white;
-      flex-direction: column;
+   align-items: center;
+   flex-direction: column;
+}
 
- }
- .icons{
-   margin-top: 17px;
- }
- .icons i{
+.icons {
+   margin-top: 14px;
+}
+
+.icons i {
    cursor: pointer;
- }
- #progressBar{
-   width: 75%;
+}
 
- }
+#myProgressBar {
+   width: 80vw;
+   cursor: pointer;
+}
+
+.songItemContainer {
+   margin-top: 74px;
+}
+
+.songItem {
+   height: 50px;
+   display: flex;
+   background-color: white;
+
+   color: black;
+   margin: 12px 0;
+   justify-content: space-between;
+   align-items: center;
+   border-radius: 34px;
+}
+
+.songItem img {
+   width: 43px;
+   margin: 0 23px;
+   border-radius: 34px;
+}
+
+.timestamp {
+   margin: 0 23px;
+}
+
+.timestamp i {
+   cursor: pointer;
+}
+
+.songInfo {
+   position: absolute;
+   left: 10vw;
+   font-family: 'Varela Round', sans-serif;
+}
+
+.songInfo img {
+   opacity: 0;
+   transition: opacity 0.4s ease-in;
+}
+
+@media only screen and (max-width: 1100px) {
+   body {
+      background-color: red;
+   }
+}
